--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -5,17 +5,17 @@
                 {% if paginator.previous_page %} {% if paginator.previous_page == 1 %}
                 <li class="previous-posts">
                     <a class="previous-link" href="{{ site.baseurl }}/">
-                        <i class="ion ion-ios-arrow-back"></i> Previous projects</a>
+                        <i class="ion ion-ios-arrow-back"></i> Main projects</a>
                 </li>
                 {% else %}
                 <li class="newer-posts">
                     <a class="newer-link" href="{{ site.baseurl }}/page/{{ paginator.previous_page }}/">
-                        <i class="ion ion-ios-arrow-back"></i> Previous projects</a>
+                        <i class="ion ion-ios-arrow-back"></i> Main projects</a>
                 </li>
                 {% endif %} {% endif %}
                 {% if paginator.next_page %}
                 <li class="older-posts">
-                    <a class="older-link" href="{{ site.baseurl }}/page/{{ paginator.next_page }}/">Older projects
+                    <a class="older-link" href="{{ site.baseurl }}/page/{{ paginator.next_page }}/">Mini projects
                         <i class="ion ion-ios-arrow-forward"></i>
                     </a>
                 </li>
